--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.13",
-    "autoprefixer": "^10.4.14",
-    "flowbite": "^1.8.0",
-    "flowbite-react": "^0.5.0",
+    "@babel/runtime": "^7.23.1",
+    "autoprefixer": "^10.4.16",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.1",
     "meteor-node-stubs": "^1.2.5",
-    "postcss": "^8.4.27",
-    "postcss-load-config": "^3.1.4",
+    "postcss": "^8.4.31",
+    "postcss-load-config": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3"
@@ -27,10 +27,11 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
+    "@types/react": "^18.2.23",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
-    "prettier": "^3.0.0"
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3"
   }
 }
